@@ -2,7 +2,7 @@
   <make>Epson</make>
   <model>LP-8300CPD</model>
   <mechanism>
-    <color/>
+    <color />
     <resolution>
       <dpi>
         <x>600</x>
@@ -24,11 +24,11 @@
   <driver>Postscript-Epson</driver>
   <drivers>
     <driver>
-      <id>Postscript-Epson</id>
-      <ppd>PPD/Epson/eplp830c.ppd</ppd>
+      <id>Postscript</id>
     </driver>
     <driver>
-      <id>Postscript</id>
+      <id>Postscript-Epson</id>
+      <ppd>PPD/Epson/eplp830c.ppd</ppd>
     </driver>
   </drivers>
   <comments>
