@@ -24,11 +24,11 @@
   <driver>Postscript-Epson</driver>
   <drivers>
     <driver>
-      <id>Postscript-Epson</id>
-      <ppd>PPD/Epson/eplp960s.ppd</ppd>
+      <id>Postscript</id>
     </driver>
     <driver>
-      <id>Postscript</id>
+      <id>Postscript-Epson</id>
+      <ppd>PPD/Epson/eplp960s.ppd</ppd>
     </driver>
   </drivers>
   <comments>
