@@ -28,11 +28,11 @@
   <driver>eplaser-jp</driver>
   <drivers>
     <driver>
-      <id>Postscript-Epson</id>
-      <ppd>PPD/Epson/eplp980c.ppd</ppd>
+      <id>eplaser-jp</id>
     </driver>
     <driver>
-      <id>eplaser-jp</id>
+      <id>Postscript-Epson</id>
+      <ppd>PPD/Epson/eplp980c.ppd</ppd>
     </driver>
   </drivers>
   <comments>
