@@ -1,3 +1,12 @@
+2010-11-26  OpenPrinting Web Server <webmaster@openprinting.org>
+
+	* db/source/printer/Epson-LP-8300CPD.xml,
+	  db/source/printer/Epson-LP-8500CPD.xml,
+	  db/source/printer/Epson-LP-9200C.xml,
+	  db/source/printer/Epson-LP-9600SPD.xml,
+	  db/source/printer/Epson-LP-9800C.xml:
+	  Entries modified in the MySQL database.
+
 2010-11-25  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* PPD/Lexmark/Lexmark_C510.ppd, PPD/Lexmark/Lexmark_C520.ppd,
